--- a/views/admin.htm
+++ b/views/admin.htm
@@ -10,6 +10,7 @@
 		    <input type="hidden" name="admin" value="plugin_main"/>
 		    <input type="hidden" name="action" value="delete"/>
 		    <input type="hidden" name="boilerplate_name" value="<?php echo $name;?>"/>
+		    <?php echo Boilerplate_renderCsrfTokenInput();?>
 		</form>
 	    </td>
 	    <td>
@@ -25,6 +26,7 @@
 	<input type="text" name="boilerplate_name"/>
 	<input type="hidden" name="admin" value="plugin_main"/>
 	<input type="hidden" name="action" value="new"/>
+	<?php echo Boilerplate_renderCsrfTokenInput();?>
 	<input type="submit" class="submit" value="<?php echo $labels['create'];?>"/>
     </form>
 </div>
