--- a/views/edit.htm
+++ b/views/edit.htm
@@ -8,5 +8,6 @@
         <input type="hidden" name="admin" value="plugin_main"/>
         <input type="hidden" name="action" value="save"/>
         <input type="hidden" name="boilerplate_name" value="<?php echo $name;?>"/>
+        <?php echo Boilerplate_renderCsrfTokenInput();?>
     </form>
 </div>
